--- a/02 - JS + CSS Clock/index-MINE.html
+++ b/02 - JS + CSS Clock/index-MINE.html
@@ -18,7 +18,7 @@
 
   <style>
     html {
-      background:#018DED url(http://unsplash.it/1500/1000?image=881&blur=50);
+      background:#018DED;
       background-size:cover;
       font-family:'helvetica neue';
       text-align: center;
@@ -61,13 +61,37 @@
       background:black;
       position: absolute;
       top:50%;
+      transform-origin: 100%;
+      transform: rotate(90deg);
+      transition: all cubic-bezier(0, 2.88, 1, 0.7) 0.05s;
     }
-
   </style>
 
   <script>
+    const secondHand = document.querySelector('.second-hand');
+    const minHand = document.querySelector('.min-hand');
+    const hourHand = document.querySelector('.hour-hand');
 
+    function setDate() {
+      const now = new Date();
 
+      // handle the seconds
+      const seconds = now.getSeconds();
+      const secondsDegrees = (seconds / 60) * 360 + 90;
+      secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
+
+      // handle minutes
+      const minutes = now.getMinutes();
+      const minuteDegrees = (minutes / 60) * 360 + 90;
+      minHand.style.transform = `rotate(${minuteDegrees}deg)`;
+
+      // handle hours
+      const hours = now.getHours();
+      const hourDegrees = (hours / 12) * 360 + 90;
+      hourHand.style.transform = `rotate(${hourDegrees}deg)`;
+    }
+
+    setInterval(setDate, 1000);
   </script>
 </body>
 </html>
