--- a/13 - Slide in on Scroll/index-MINE.html
+++ b/13 - Slide in on Scroll/index-MINE.html
@@ -62,7 +62,7 @@
 
     function checkSlide(e) {
       sliderImages.forEach(sliderImage => {
-        // half way through the image
+        // halfway through the image
         const slideInAt = (window.scrollY + window.innerHeight) - sliderImage.height / 2;
         // bottom of the image
         const imageBottom = sliderImage.offsetTop + sliderImage.height;
@@ -107,7 +107,7 @@
       text-align: justify;
     }
 
-    .align-left {
+    .align-left {1
       float:left;
       margin-right:20px;
     }
