--- a/15 - LocalStorage/index-MINE.html
+++ b/15 - LocalStorage/index-MINE.html
@@ -22,14 +22,76 @@
     <form class="add-items">
       <input type="text" name="item" placeholder="Item Name" required>
       <input type="submit" value="+ Add Item">
+      <div class="other-functions">
+        <input type="button" name="clear" value="Clear">
+        <input class="select-all" data-check=true type="button" name="selectAll" value="Select All">
+        <input class="select-all" data-check=false type="button" name="deSelectAll" value="Deselect All">
+      </div>
     </form>
   </div>
 
 <script>
   const addItems = document.querySelector('.add-items');
+  const clearItems = document.querySelector('input[name=clear]');
+  const selectAll = document.querySelectorAll('.select-all');
   const itemsList = document.querySelector('.plates');
-  const items = [];
+  const items = JSON.parse(localStorage.getItem('items')) || [];
 
+  function addItem(e) {
+    e.preventDefault();
+    const text = (this.querySelector('[name=item]')).value;
+    const item = {
+      text,
+      done: false
+    };
+    items.push(item);
+    populateList(items, itemsList);
+    localStorage.setItem('items', JSON.stringify(items));
+    this.reset();
+  }
+
+  function populateList(plates = [], platesList) {
+    platesList.innerHTML = plates.map((plate, i) => {
+      return `
+        <li>
+          <input type="checkbox" data-index=${i} id="item${i}" ${plate.done ? 'checked' : ''} />
+          <label for="item${i}">${plate.text}</label>
+        </li>
+      `;
+    }).join('');
+  }
+
+  function toggleDone(e) {
+    if (!e.target.matches('input')) return; // skips this unless input
+    const el = e.target;
+    const index = el.dataset.index;
+    items[index].done = !items[index].done;
+    localStorage.setItem('items', JSON.stringify(items));
+  }
+
+  function clearAll() {
+    items.length = 0;
+    populateList(items, itemsList);
+    localStorage.setItem('items', JSON.stringify(items));
+  }
+
+  function toggleSelectAll() {
+    const inputs = document.querySelectorAll('input[type=checkbox]');
+    const checkAll = JSON.parse(this.dataset.check);
+    if (checkAll) {
+      inputs.forEach(input => input.checked = true);
+    } else {
+      inputs.forEach(input => input.checked = false);
+    }
+    items.forEach(item => item.done = checkAll);
+    localStorage.setItem('items', JSON.stringify(items));
+  }
+
+  addItems.addEventListener('submit', addItem);
+  itemsList.addEventListener('click', toggleDone);
+  clearItems.addEventListener('click', clearAll);
+  selectAll.forEach(button => button.addEventListener('click', toggleSelectAll));
+  populateList(items, itemsList);
 </script>
 
 
