--- a/18 - Adding Up Times with Reduce/index-MINE.html
+++ b/18 - Adding Up Times with Reduce/index-MINE.html
@@ -180,8 +180,23 @@
     <li data-time="4:04">
       Video 58
     </li>
-
 <script>
+  const timeNodes = [...document.querySelectorAll('[data-time]')];
+  const seconds = timeNodes
+    .map(node => node.dataset.time)
+    .map(timeCode => {
+      const [mins, secs] = timeCode.split(':').map(parseFloat);
+      return mins * 60 + secs;
+    })
+    .reduce((total, vidSeconds) => total + vidSeconds);
+
+    let secondsLeft = seconds;
+    const hours = Math.floor(secondsLeft / 3600);
+    secondsLeft = secondsLeft % 3600;
+    const mins = Math.floor(secondsLeft / 60);
+    secondsLeft = secondsLeft % 60;
+
+    console.log(`${hours}:${mins}:${secondsLeft}`);
 </script>
 </body>
 </html>
