--- a/25 - Event Capture, Propagation, Bubbling and Once/index-MINE.html
+++ b/25 - Event Capture, Propagation, Bubbling and Once/index-MINE.html
@@ -37,9 +37,25 @@
   }
 </style>
 
-<button></button>
+<button>This button can only be clicked once</button>
 <script>
+  const divs = document.querySelectorAll('div');
+  const button = document.querySelector('button');
 
+  function logText(e) {
+    console.log(this.classList.value);
+    //e.stopPropagation();
+  }
+
+  divs.forEach(div => div.addEventListener('click', logText, {
+    capture: false,
+  }));
+
+  button.addEventListener('click', () => {
+    console.log('Clicked!');
+  }, {
+    once: true
+  });
 </script>
 </body>
 </html>
